Updated swagger documentation and controller test
