# resources/swagger/openapi.json
@@ -31,6 +31,13 @@
     "https",
     "http"
   ],
+  "securityDefinitions": {
+    "bearerAuth": {
+      "type": "apiKey",
+      "name": "Authorization",
+      "in": "header"
+    }
+  },
   "paths": {
     "/login": {
       "post": {
@@ -67,7 +74,12 @@
           "422": {
             "description": "validation error"
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/customers": {
@@ -106,18 +118,21 @@
         ],
         "responses": {
           "200": {
-            "description": "successful operation",
+            "description": "Successful operation",
             "schema": {
-              "$ref": "#/definitions/CustomerCollectionResponse"
+              "$ref": "#/definitions/CollectionResponse"
             }
           },
+          "401": {
+            "description": "Unauthenticated"
+          },
           "404": {
-            "description": "not found"
+            "description": "Not found"
           }
         },
         "security": [
           {
-            "api_key": []
+            "bearerAuth": []
           }
         ]
       },
@@ -144,18 +159,24 @@
         ],
         "responses": {
           "200": {
-            "description": "successful operation",
+            "description": "Successful operation",
             "schema": {
               "$ref": "#/definitions/CustomerResponse"
             }
           },
+          "401": {
+            "description": "Unauthenticated"
+          },
           "404": {
-            "description": "not found"
+            "description": "Not found"
+          },
+          "422": {
+            "description": "Validation error"
           }
         },
         "security": [
           {
-            "api_key": []
+            "bearerAuth": []
           }
         ]
       }
@@ -191,18 +212,24 @@
         ],
         "responses": {
           "201": {
-            "description": "successful operation",
+            "description": "Successful operation",
             "schema": {
               "$ref": "#/definitions/CustomerResponse"
             }
           },
+          "401": {
+            "description": "Unauthenticated"
+          },
           "404": {
             "description": "Not found"
+          },
+          "422": {
+            "description": "Validation error"
           }
         },
         "security": [
           {
-            "api_key": []
+            "bearerAuth": []
           }
         ]
       },
@@ -227,12 +254,20 @@
         ],
         "responses": {
           "204": {
-            "description": "successful operation"
+            "description": "Successful operation"
+          },
+          "401": {
+            "description": "Unauthenticated"
           },
           "404": {
             "description": "Not found"
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/users": {
@@ -273,8 +308,11 @@
           "200": {
             "description": "successful operation",
             "schema": {
-              "$ref": "#/definitions/UserCollectionResponse"
+              "$ref": "#/definitions/CollectionResponse"
             }
+          },
+          "401": {
+            "description": "Unauthenticated"
           },
           "404": {
             "description": "not found"
@@ -282,17 +320,54 @@
         },
         "security": [
           {
-            "api_key": []
+            "bearerAuth": []
+          }
+        ]
+      },
+      "post": {
+        "tags": [
+          "users"
+        ],
+        "summary": "Upload csv",
+        "description": "Upload users via csv",
+        "operationId": "uploadCsv",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Parameters to upload csv",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/UploadCSV"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "schema": {
+              "$ref": "#/definitions/CustomerResponse"
+            }
+          },
+          "401": {
+            "description": "Unauthenticated"
+          },
+          "404": {
+            "description": "Not found"
+          },
+          "422": {
+            "description": "Validation error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
           }
         ]
       }
-    }
-  },
-  "securityDefinitions": {
-    "api_key": {
-      "type": "apiKey",
-      "name": "api_key",
-      "in": "header"
     }
   },
   "definitions": {
@@ -347,6 +422,15 @@
         }
       }
     },
+    "UploadCSV": {
+      "type": "object",
+      "properties": {
+        "csv_file": {
+          "type": "string",
+          "format": "binary"
+        }
+      }
+    },
     "Customer": {
       "type": "object",
       "properties": {
@@ -392,7 +476,7 @@
         }
       }
     },
-    "CustomerCollectionResponse": {
+    "CollectionResponse": {
       "type": "object",
       "properties": {
         "data": {
@@ -441,59 +525,6 @@
           }
         }
       }
-    },
-    "UserCollectionResponse": {
-          "type": "object",
-          "properties": {
-              "data": {
-                  "type": "array",
-                  "items": {
-                      "type": "object",
-                      "properties": {
-                          "id": {
-                              "type": "integer"
-                          },
-                          "first_name": {
-                              "type": "string"
-                          },
-                          "last_name": {
-                              "type": "string"
-                          },
-                          "email": {
-                              "type": "string"
-                          },
-                          "phone_numbers": {
-                              "type": "array",
-                              "items": {
-                                  "type": "object",
-                                  "properties": {
-                                      "phone_number": {
-                                          "type": "string"
-                                      }
-                                  }
-                              }
-                          },
-                          "is_admin": {
-                              "type": "boolean"
-                          }
-                      }
-                  }
-              },
-              "meta": {
-                  "type": "object",
-                  "properties": {
-                      "current_page": {
-                          "type": "integer"
-                      },
-                      "last_page": {
-                          "type": "integer"
-                      },
-                      "total": {
-                          "type": "integer"
-                      }
-                  }
-              }
-          }
-      }
+    }
   }
 }
